--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeflex/primeflex.css";
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&display=swap");
 
 body {
-  font-family: var(--font-family);
+  font-family: "Playfair Display", "Merriweather", serif;
   margin: 0;
 }
