Created and styled home page initial components.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p-menubar [model]="items" breakpoint="500px" />
+<div class="box-shadow-light position-relative">
+  <p-menubar [model]="items" breakpoint="575px" />
+  <img
+    src="assets/wine.jpg"
+    class="w-7rem h-auto ml-4 position-absolute top-0 right-0 sm:w-8rem"
+    style="margin-right: -2rem"
+  />
+</div>
