--- a/src/app/components/wine-search/wine-search.component.html
+++ b/src/app/components/wine-search/wine-search.component.html
@@ -1,2 +1,29 @@
 <app-header></app-header>
-<p>wine-search works!</p>
+<main class="pt-4">
+  <div>
+    <h1 class="text-primary-700 text-center m-0 font-weight-light">
+      Search Our Wines!
+    </h1>
+    <p class="text-center m-0 text-primary-400">
+      Choose 3 of your favorite wine characteristics and hit search!
+    </p>
+    <p class="text-center m-0 text-primary-400">
+      For example: 'Fruity', 'Pinot', 'Canada' and see all wines on our list
+      matching those characteristics!
+    </p>
+  </div>
+  <form class="flex justify-content-center mt-4 gap-3 flex-wrap">
+    <div>
+      <label></label>
+      <input type="text" pInputText />
+    </div>
+    <div>
+      <label></label>
+      <input type="text" pInputText />
+    </div>
+    <div>
+      <label></label>
+      <input type="text" pInputText />
+    </div>
+  </form>
+</main>
