Updated admin page styling.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="box-shadow-light position-relative">
+<div class="box-shadow-light position-relative w-full">
   <p-menubar [model]="items" breakpoint="575px" />
   <img
     src="assets/wine.jpg"
