--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,22 +1,26 @@
 <app-header></app-header>
 
-<form class="card" (submit)="onSubmit()">
+<form class="card w-full" (submit)="onSubmit()">
   <h1 class="w-full text-center text-primary-700 font-weight-light text-xxl">
     Wine List
   </h1>
   <p-divider></p-divider>
-  <p-accordion [multiple]="true" class="p-0">
+  <p-accordion [multiple]="true" [value]="0" class="p-0">
     @for (wine of wines; track $index) {
-    <p-accordion-panel>
+    <p-accordion-panel class="mb-2" [value]="$index">
       <div class="flex flex-column">
         <p-accordion-header class="flex justify-content-between py-0">
           <div class="flex">
-            <h3 class="text-primary-700">{{ $index + 1 }}.&nbsp;</h3>
-            <h3 class="text-primary-700">
+            <h3 class="text-primary-800 font-weight-medium">
+              {{ $index + 1 }}.&nbsp;
+            </h3>
+            <h3
+              class="flex text-primary-800 font-weight-medium m-1 my-2 mr-2 align-items-center"
+            >
               {{ wine.wineName }} ({{ wine.vintage }}) - {{ wine.winery }}
             </h3>
           </div>
-          <div class="flex gap-2 flex-1 justify-content-end pr-4">
+          <div class="flex gap-2 flex-1 justify-content-end pr-3">
             <button
               pButton
               icon="pi pi-trash"
@@ -105,18 +109,18 @@
               />
             </div>
             <div class="flex flex-column flex-1">
-                <label for="provinceState" class="text-primary-600 text-sm pb-1"
-                  >Province/State</label
-                >
-                <p-dropdown
-                  id="provinceState"
-                  name="provinceState"
-                  [options]=""
-                  placeholder="Select Style"
-                  [(ngModel)]="wine.country"
-                  appendTo="body"
-                />
-              </div>
+              <label for="provinceState" class="text-primary-600 text-sm pb-1"
+                >Province/State</label
+              >
+              <p-dropdown
+                id="provinceState"
+                name="provinceState"
+                [options]=""
+                placeholder="Select Style"
+                [(ngModel)]="wine.country"
+                appendTo="body"
+              />
+            </div>
             <div class="flex flex-column flex-1">
               <label for="region" class="text-primary-600 text-sm pb-1"
                 >Region</label
@@ -143,24 +147,29 @@
             </div>
           </div>
         </p-accordion-content>
-        <div class="w-full flex justify-content-end gap-3 pt-4">
-          <button
-            pButton
-            icon="pi pi-plus"
-            type="button"
-            class="round p-button-raised p-button-text custom-hover-button"
-            (click)="addWine()"
-          >
-            Add
-          </button>
-        </div>
       </div>
-      <p-divider></p-divider>
     </p-accordion-panel>
     }
+    <div class="w-full flex justify-content-end gap-3 pt-1">
+      <button
+        pButton
+        icon="pi pi-plus"
+        type="button"
+        class="round p-button-raised p-button-text custom-hover-button"
+        (click)="addWine()"
+      >
+        Add
+      </button>
+    </div>
+    <p-divider></p-divider>
   </p-accordion>
-  <div class="w-full flex justify-content-center">
-    <button type="submit" pButton pRipple class="p-button-raised">
+  <div class="w-full flex justify-content-center pt-3">
+    <button
+      type="submit"
+      pButton
+      pRipple
+      class="p-button-raised w-full md:w-auto"
+    >
       Save Changes
     </button>
   </div>
