Added additional CRUD service calls. Added logic to initialize with empty form when wine list empty.

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -30,7 +30,7 @@
                   icon="pi pi-trash"
                   class="round p-button-raised p-button-sm"
                   type="button"
-                  (click)="deleteWine($index, $event)"
+                  (click)="deleteWine($index, $event, wineControl?.value)"
                 ></button>
               </div>
             </p-accordion-header>
