--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,16 @@ html {
     color: #064007 !important;
   }
 }
+
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
